rs/macros/tests/ui/gservice_fails_query_reply_with_value.stderr
error: using `CommandReply` type in a query is not allowed
 --> tests/ui/gservice_fails_query_reply_with_value.rs:8:37
  |
8 |     pub fn this(&self, p1: bool) -> CommandReply<bool> {
  |                                     ^^^^^^^^^^^^
